<resources>
    <string name="app_name">Virox POS (R)</string>
    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="company">Company</string>
    <string name="re_enter_password">Re enter password</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="new_project">NEW PROJECT</string>
    <string name="existing_project">EXISTING PROJECT</string>
    <string name="project_name">PROJECT NAME</string>
    <string name="location_city">LOCATION (City)</string>
    <string name="country">COUNTRY</string>
    <string name="date_time"><![CDATA[DATE & TIME]]></string>
    <string name="thumbnail">THUMBNAIL</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>
    <string name="voice_record">VOICE RECORD</string>
    <string name="select_project">SELECT PROJECT</string>
    <string name="enter_data">Enter Data</string>
    <string name="search">SEARCH</string>
    <string name="downtime_management">DOWNTIME MANAGEMENT</string>
    <string name="photo_details">Photo Details</string>
    <string name="users">USERS</string>
    <string name="project_list">PROJECT LIST</string>
    <string name="change_server_url">Change Server</string>
    <string name="text_input_title">Server Url</string>
    <string name="text_input_error_message">Please type server url.</string>
    <string name="resolved">Resolved</string>
    <string name="paused">Paused</string>
    <string name="downtime">Downtime</string>
    <string name="arrival">Arrival</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="no_internet">No Internet</string>
    <string name="server_error">Server Error</string>
    <string name="required_field">This filed is required</string>
    <string name="string_msg_email_invalid">This email is not valid.</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="developed_by_virox_software_house_sdn_bhd">Developed by Virox Software House Sdn Bhd</string>
    <string name="total_orders">TOTAL ORDERS</string>
    <string name="shop_index">Shop Index</string>


    <string-array name="android_dropdown_arrays">
        <item>Choose a Item</item>
        <item>Drop Down List 1</item>
        <item>Drop Down List 2</item>
        <item>Drop Down List 3</item>
        <item>Drop Down List 5</item>
        <item>Drop Down List 6</item>
        <item>Drop Down List 7</item>
        <item>Drop Down List 8</item>
    </string-array>

</resources>
